--- a/samples/UserWebServer/signup_error.html
+++ b/samples/UserWebServer/signup_error.html
@@ -11,6 +11,9 @@
     <body>
         <div class="container">
             <h1>Đăng ký thành viên</h1>
+			<div class="alert alert-warning">
+				<strong>Warning!</strong> Tên đăng nhập đã tồn tại. Hãy chọn tên đăng nhập khác.
+			</div>
             <form action="/signup" method="POST">
                 <div class="form-group">
                     <label for="uname">Tên truy nhập:</label>
