--- a/samples/UserWebServer/users.html
+++ b/samples/UserWebServer/users.html
@@ -23,26 +23,28 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr>
-                    <td>John</td>
-                    <td>Doe</td>
-                    <td>john@example.com</td>
-                    <td><button type="button" class="btn"><i class="fas fa-edit"></i></button></td>
-                    <td><button type="button" class="btn"><i class="far fa-trash-alt"></i></button></td>
-                  </tr>
-                  <tr>
-                    <td>Mary</td>
-                    <td>Moe</td>
-                    <td>mary@example.com</td>
-                    <td><button type="button" class="btn"><i class="fas fa-edit"></i></button></td>
-                    <td><button type="button" class="btn"><i class="far fa-trash-alt"></i></button></td>
-                  <tr>
-                    <td>July</td>
-                    <td>Dooley</td>
-                    <td>july@example.com</td>
-                    <td><button type="button" class="btn"><i class="fas fa-edit"></i></button></td>
-                    <td><button type="button" class="btn"><i class="far fa-trash-alt"></i></button></td>
-                  </tr>
+[user_list]
+                  <!-- <tr> -->
+                    <!-- <td>john</td> -->
+                    <!-- <td>doe</td> -->
+                    <!-- <td>john@example.com</td> -->
+                    <!-- <td><button type="button" class="btn"><i class="fas fa-edit"></i></button></td> -->
+                    <!-- <td><button type="button" class="btn"><i class="far fa-trash-alt"></i></button></td> -->
+                  <!-- </tr> -->
+                  <!-- <tr> -->
+                    <!-- <td>Mary</td> -->
+                    <!-- <td>Moe</td> -->
+                    <!-- <td>mary@example.com</td> -->
+                    <!-- <td><button type="button" class="btn"><i class="fas fa-edit"></i></button></td> -->
+                    <!-- <td><button type="button" class="btn"><i class="far fa-trash-alt"></i></button></td> -->
+                  <!-- <tr> -->
+                    <!-- <td>July</td> -->
+                    <!-- <td>Dooley</td> -->
+                    <!-- <td>july@example.com</td> -->
+                    <!-- <td><button type="button" class="btn"><i class="fas fa-edit"></i></button></td> -->
+                    <!-- <td><button type="button" class="btn"><i class="far fa-trash-alt"></i></button></td> -->
+                  <!-- </tr> -->
+				  
                 </tbody>
               </table>
         </div>
