--- a/samples/UserWebServer/signin_error.html
+++ b/samples/UserWebServer/signin_error.html
@@ -10,29 +10,20 @@
     </head>
     <body>
         <div class="container">
-            <h1>Đăng ký thành viên</h1>
-            <form action="/signup" method="POST">
+            <h1>Đăng nhập</h1>
+			<div class="alert alert-warning">
+				<strong>Warning!</strong> Tên đăng nhập hoặc mật khẩu không đúng. Hãy nhập lại.
+			</div>
+            <form action="/signin" method="POST">
                 <div class="form-group">
                     <label for="uname">Tên truy nhập:</label>
                     <input type="text" class="form-control" id="uname" placeholder="Enter username" name="uname" required>
                 </div>
                 <div class="form-group">
-                    <label for="fname">Họ tên:</label>
-                    <input type="text" class="form-control" id="fname" placeholder="Enter full name" name="fname" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email:</label>
-                    <input type="text" class="form-control" id="email" placeholder="Enter email" name="email" required>
-                </div>
-                <div class="form-group">
                     <label for="pwd">Mật khẩu:</label>
                     <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd" required>
                 </div>
-                <div class="form-group">
-                    <label for="rpwd">Nhập lại mật khẩu:</label>
-                    <input type="password" class="form-control" id="rpwd" placeholder="Re-enter password" name="rpswd" required>
-                </div>
-                <button type="submit" class="btn btn-primary">Đăng ký</button>
+                <button type="submit" class="btn btn-primary">Đăng nhập</button>
             </form>
         </div>
     </body>
